name: "bisect_ppx"
version: "dev"
opam-version: "1.2"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Leonid Rozenberg <leonidr@gmail.com>"
]
authors: [
  "Xavier Clerc <bisect@x9c.fr>"
  "Leonid Rozenberg <leonidr@gmail.com>"
  "Anton Bachin <antonbachin@yahoo.com>"
]
license: "GPL3"
homepage: "https://github.com/aantron/bisect_ppx"
bug-reports: "https://github.com/aantron/bisect_ppx/issues"
dev-repo: "https://github.com/aantron/bisect_ppx.git"

depends: [
  "base-unix"
  "jbuilder" {build & >= "1.0+beta10"}
  # This will be removed when bisect_ppx-ocamlbuild is fully factored
  # out. It is not a build dependency because Ocamlbuild must be present
  # each time the plugin is used, even after it is built and installed.
  "ocamlbuild"
  "ocaml-migrate-parsetree"
  "ounit" {test}
  "ppx_tools_versioned" {build}
]
conflicts: [
  "ocveralls" {<= "0.3.2"}
]
# Note that Bisect_ppx effectively requires 4.02.3, because Jbuilder requires
# it. 4.02.0 is the natural constraint of Bisect_ppx.
available: ocaml-version >= "4.02.0"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
