opam-version: "2.0"

synopsis: "Code coverage for OCaml"
version: "2.5.0"
license: "MIT"
homepage: "https://github.com/aantron/bisect_ppx"
doc: "https://github.com/aantron/bisect_ppx"
bug-reports: "https://github.com/aantron/bisect_ppx/issues"

dev-repo: "git+https://github.com/aantron/bisect_ppx.git"
authors: [
  "Xavier Clerc <bisect@x9c.fr>"
  "Leonid Rozenberg <leonidr@gmail.com>"
  "Anton Bachin <antonbachin@yahoo.com>"
]
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Leonid Rozenberg <leonidr@gmail.com>"
]

depends: [
  "base-unix"
  "cmdliner" {>= "1.0.0"}
  "dune" {>= "2.7.0"}
  "ocaml" {>= "4.02.0"}
  "ocaml-migrate-parsetree" {>= "1.7.0" & < "2.0.0"}
  "ppx_tools_versioned" {>= "5.4.0"}

  "ocamlformat" {with-test & = "git.1bf68a7"}
]

pin-depends: [
  # This is the last commit before ocamlformat's ppxlib conversion. A newer
  # commit, or no pin at all, can be used once Bisect_ppx is also converted to
  # ppxlib.
  ["ocamlformat.git.1bf68a7" "git+https://github.com/ocaml-ppx/ocamlformat.git#1bf68a70f1480df80a8ab0bd20a799b8e1df0081"]
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@compatible"] {with-test}
]

description: "Bisect_ppx helps you test thoroughly. It is a small preprocessor
that inserts instrumentation at places in your code, such as if-then-else and
match expressions. After you run tests, Bisect_ppx gives a nice HTML report
showing which places were visited and which were missed.

Usage is simple - add package bisect_ppx when building tests, run your tests,
then run the Bisect_ppx report tool on the generated visitation files."
